refactor: decouple api for web and potential mobile
